--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body {
 #defaultCanvas0 {
   padding-left: 0;
   padding-right: 0;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto;
+  margin-right: auto; */
   display: block;
 }
 
